--- a/designer/datasource-editor-jdbc/source/org/pentaho/reporting/ui/datasources/jdbc/messages.properties
+++ b/designer/datasource-editor-jdbc/source/org/pentaho/reporting/ui/datasources/jdbc/messages.properties
@@ -32,6 +32,8 @@ ConnectionPanel.Edit.Description=Edit the selected connection.
 ConnectionPanel.Remove.Name=Remove
 ConnectionPanel.Remove.Description=Remove the selected connection.
 ConnectionPanel.Connections=Connections:
+ConnectionPanel.StoredConnections=Template Connections
+ConnectionPanel.SharedConnections=Shared Connections
 
 SchemaSelectionDialog.ChooseSchema=Choose Schema
 
